tests/test/tests/ui/fail-invalid/missing_reason.stderr
error: Citation requires documentation but no annotation provided. Add a 'reason = "..."' attribute or enable the annotationless feature
 --> tests/ui/fail-invalid/missing_reason.rs:5:1
  |
5 | #[cite(mock, same = "content")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
